add environment variables to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ services:
  
 script:
   - go test -v ./...
+  
+env:
+  - APP_DB_USERNAME=postgres
+  - APP_DB_PASSWORD=
+  - APP_DB_NAME=postgres
