--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,4 @@ script:
   - go test -v ./...
   
 env:
-  - APP_DB_USERNAME=postgres
-  - APP_DB_PASSWORD=
-  - APP_DB_NAME=postgres
+  - APP_DB_USERNAME=postgres APP_DB_PASSWORD="" APP_DB_NAME=postgres
